agregado seccion documentacion del readme

--- a/src/content/docs/al/guides/standard.mdx
+++ b/src/content/docs/al/guides/standard.mdx
@@ -904,3 +904,40 @@ if OfficeRoom.FindSet() then
         TotalRate += OfficeRoom.VogOccupancyRate;
     until OfficeRoom.Next() = 0;
 ```
+
+
+## Documentación del código
+
+El archivo README.md en la raíz del proyecto debe contener una descripción clara y concisa de la extensión, incluyendo su propósito, funcionalidades principales, requisitos previos y cualquier otra información relevante para los desarrolladores y usuarios finales.
+
+La estructura recomendada para el archivo README.md es la siguiente:
+
+#### Nombre de la extensión
+
+Debe ser el título principal del archivo README.md
+
+#### Descripción
+
+Una breve descripción de la extensión, su propósito y las funcionalidades que ofrece.
+
+#### Rangos de Objetos
+
+El rango de id de los objetos utilizados en la extensión.
+
+#### Descripcion de objetos 
+
+Una lista de los objetos principales incluidos en la extensión, con una breve descripción de cada uno.
+En el caso de las tabla y las paginas, incluir una lista de los campos principales y su descripción.
+
+#### Requisitos Previos
+
+Instrucciones sobre los requisitos previos necesarios para instalar y utilizar la extensión, como versiones específicas de Business Central o dependencias de otras extensiones. Esta sección es **opcional**.
+
+#### Uso Funcional 
+
+Instrucciones sobre cómo utilizar la extensión, incluyendo ejemplos de uso si es necesario.
+
+### Ejemplo de README.md
+
+Se puede encontrar un ejemplo de archivo README.md siguiendo este estándar en el siguiente repositorio de GitHub:
+- [Ejemplo de README.md](https://github.com/Virtual-Office-Group/PlantillaAl)
