corregido url de imagen

--- a/src/content/docs/al/Inicio/create_extension.mdx
+++ b/src/content/docs/al/Inicio/create_extension.mdx
@@ -15,7 +15,7 @@ Despues de instalar el ambiente de desarrollo realizar los siguientes pasos.
     Abre la Paleta de comandos en Visual Code **(Ctrl+Shift+P)** y escribe **AL: Go!.**
 
 
-![al-go.webp](../../../../../assets/documentation/starting/al-go.webp)
+![al-go.webp](../../../../assets/documentation/starting/al-go.webp)
 
 ## Seguir el Asistente
 
